bugfix: content was overflowing

--- a/components/style/projectGallery.module.scss
+++ b/components/style/projectGallery.module.scss
@@ -5,7 +5,7 @@
      height: 100%;
      margin: 0 auto;
      display: grid;
-     grid-template-columns: repeat(2, 50%);
+     grid-template-columns: repeat(2, calc(50% - 5px));
      grid-gap: 10px;
      grid-auto-rows: 100px;
      // position: sticky;
