--- a/components/style/projectHero.module.scss
+++ b/components/style/projectHero.module.scss
@@ -1,52 +1,52 @@
-@import "../../base/index.scss";
+@import '../../base/index.scss';
 
 .projectHero {
-  width: 100%;
-  height: 55vh;
+     width: 100%;
+     height: 55vh;
+     display: flex;
+     background: black;
+     align-items: flex-end;
+     justify-content: center;
+     position: sticky;
+     top: 0;
+     background: rgb(0, 180, 219);
+     background: linear-gradient(
+          107deg,
+          rgba(0, 180, 219, 1) 0%,
+          rgba(0, 131, 176, 1) 100%
+     );
+     img {
+          // width: 100%;
+          height: 80%;
+          width: 100%;
+          margin-bottom: $mn/6;
+          object-fit: cover;
+          position: absolute;
+     }
+     h1 {
+          @include logoFont;
+          font-size: 100px;
+          color: white;
+     }
+     .overlay {
+          background: $white101;
 
-  display: flex;
-  background: black;
-  align-items: flex-end;
-  justify-content: center;
-  position: sticky;
-  top: 0;
-  background: rgb(0, 180, 219);
-  background: linear-gradient(
-    107deg,
-    rgba(0, 180, 219, 1) 0%,
-    rgba(0, 131, 176, 1) 100%
-  );
-  img {
-    // width: 100%;
-    height: 80%;
-    margin-bottom: $mn/6;
-    object-fit: cover;
-    position: absolute;
-  }
-  h1 {
-    @include logoFont;
-    font-size: 100px;
-    color: white;
-  }
-  .overlay {
-    background: $white101;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          position: absolute;
+          opacity: 0;
+     }
+     @include mediaTablet {
+          height: 65vh;
 
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-    opacity: 0;
-  }
-  @include mediaTablet {
-    height: 65vh;
-
-    img {
-      margin-left: -10%;
-      margin-bottom: $mn/2;
-    }
-  }
-  @include mediaDesktop {
-    height: 65vh;
-  }
+          img {
+               margin-left: -10%;
+               margin-bottom: $mn/2;
+          }
+     }
+     @include mediaDesktop {
+          height: 65vh;
+     }
 }
